--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -114,6 +114,27 @@
                     </li >
                 </ul>
             </li>
+            <li>
+                <a href="javascript:;">
+                    <i class="iconfont">&#xe723;</i>
+                    <cite>文章列表</cite>
+                    <i class="iconfont nav_right">&#xe697;</i>
+                </a>
+                <ul class="sub-menu">
+                    <li>
+                        <a _href="/admin/index/webinfo">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>添加文章</cite>
+                        </a>
+                    </li >
+                    <li>
+                        <a _href="/admin/index/webinfo">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>文章列表</cite>
+                        </a>
+                    </li >
+                </ul>
+            </li>
         </ul>
       </div>
     </div>
