--- a/application/index/view/index/head.html
+++ b/application/index/view/index/head.html
@@ -23,12 +23,17 @@
         s.parentNode.insertBefore(hm, s);
     })();
     </script>
+    <style type="text/css">
+        .container{
+            width: 1200px !important;
+        }
+    </style>
 </head>
 
 <body>
     <p id="back-to-top"><a href="#top"><span></span><img src="/static/picture/top.png"></a></p>
     <!-- 单页主体 -->
-    <div class="subject">
+    <div class="subject" style="min-width: 1200px">
         <!-- 头部 -->
         <div class="snav">
             <div class="lhjhead">
