--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -24,9 +24,10 @@
             <i title="展开左侧栏" class="iconfont">&#xe699;</i>
         </div>
         <ul class="layui-nav right" lay-filter="">
-            <li class="layui-nav-item to-index"><a href="/index/index/index">前台首页</a></li>
+          <li class="layui-nav-item to-index"><a href="/index/index/index">前台首页</a></li>
           <li class="layui-nav-item"><a href="admin/index/loginout">退出</a></li>
         </ul>
+
         
     </div>
     <!-- 顶部结束 -->
@@ -124,6 +125,21 @@
                         <a _href="/admin/index/articlelist">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>文章列表</cite>
+                        </a>
+                    </li >
+                </ul>
+            </li>
+            <li>
+                <a href="javascript:;">
+                    <i class="iconfont">&#xe723;</i>
+                    <cite>账号信息</cite>
+                    <i class="iconfont nav_right">&#xe697;</i>
+                </a>
+                <ul class="sub-menu">
+                    <li>
+                        <a _href="/admin/index/updatepass">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>修改密码</cite>
                         </a>
                     </li >
                 </ul>
