--- a/application/index/view/index/articlelist.html
+++ b/application/index/view/index/articlelist.html
@@ -5,14 +5,14 @@
 <br><br><br>
 <main class="packages-list-container" id="all-packages">
     <div class="container">
-        <div class="col-md-8 blog-main">
+        <div class="col-xs-8 blog-main">
             <div class="blog-post">
                 <h2 class="blog-post-title">{$article.title}</h2>
                 <p class="blog-post-meta">发表时间：{$article.time}</p>
                 {$article.editorValue}
             </div>
         </div>
-        <aside class="col-md-3 sidebar">
+        <aside class="col-xs-3 sidebar">
             <div class="widget">
                 <h4 class="title">公众号</h4>
                 <div class="content community">
