--- a/application/index/view/index/article.html
+++ b/application/index/view/index/article.html
@@ -5,14 +5,14 @@
 <br><br><br>
 <main class="packages-list-container" id="all-packages">
     <div class="container">
-        <div class="list-group packages col-md-8" id="common-packages">
+        <div class="list-group packages col-xs-8" id="common-packages">
             {volist name='article' id='vo'}
             <a href="/index/index/articlelist?id={$vo.id}" class="package list-group-item">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-xs-3">
                         <img src="/static/picture/{$vo.poster}" height="100px" width="133px">
                     </div>
-                    <div class="col-md-9 hidden-xs">
+                    <div class="col-xs-9 hidden-xs">
                         <h4>{$vo.title}</h4>
                         <div style="float: right;font-size: 10px">发表于 {$vo.time}</div>
                     </div>
@@ -22,7 +22,7 @@
             {/volist}
             {$article->render()}
         </div>
-        <aside class="col-md-3 sidebar">
+        <aside class="col-xs-3 sidebar">
             <div class="widget">
                 <h4 class="title">公众号</h4>
                 <div class="content community">
@@ -35,7 +35,7 @@
                 <div class="widget">
                     <h4 class="title">最新动态</h4>
                     {foreach $list as $key=>$vo }
-                    <a href="/index/index/articlelist?id={$vo.id}" class="btn btn-default btn-block">{$vo.title|mb_substr=0,10}......</a>
+                    <a href="/index/index/articlelist?id={$vo.id}" class="btn btn-default btn-block text-left">{$vo.title|mb_substr=0,10}......</a>
                     {/foreach}
                 </div>
         </aside>
