--- a/application/index/view/index/articlelist.html
+++ b/application/index/view/index/articlelist.html
@@ -1,5 +1,10 @@
 ﻿{include file="index/head" /}
 <link rel="stylesheet" type="text/css" href="/static/css/screen.min.css">
+<style type="text/css">
+    p{
+        line-height: 25px;
+    }
+</style>
 <div class="gs_bottom3" style="height:293px;background-image: url('/static/picture/promo_banner_bg_01.jpg')"></div>
 <div style="clear:both"></div>
 <div class="container">
@@ -26,7 +31,7 @@
                 <h4 class="title">公众号</h4>
                 <div class="content community">
                     <img src="/static/picture/{$index8.img}" height="200px" width="200px">
-                                                </div>
+                </div>
                 </div>
                 <div class="widget"><h4 class="title">最新开班时间</h4>
                     <h5 style="color: red">2018年3月5日 西门子全科班 名额已不多 火热报名中...</h5>
