--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -122,6 +122,12 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
+                        <a _href="/admin/index/nav">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>导航图片</cite>
+                        </a>
+                    </li >
+                    <li>
                         <a _href="/admin/index/articleadd">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>添加文章</cite>
