--- a/application/index/view/index/foot.html
+++ b/application/index/view/index/foot.html
@@ -3,7 +3,7 @@
         <p class="gs_04" style="line-height: 50px;font-size: 15px">地址：{$index8.address}</p>
         <p class="gs_05" style="line-height: 25px;font-size: 15px">Copyright © 91工控网</p>
         <p class="gs_05" style="line-height: 25px;font-size: 15px">{$index8.beian}</p>
-        <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11000002000006"><p class="gs_05" style="line-height: 25px;font-size: 15px"><img src="/static/images/beiantubiao.png"> 京公网安备 11000002000006号</p></a>
+        <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=42018502001065"><p class="gs_05" style="line-height: 25px;font-size: 15px"><img src="/static/images/beiantubiao.png"> 鄂公网安备 42018502001065号</p></a>
     </div>
     <div class="right">
         <img src="/static/picture/{$index8.img}" class="gs_img1"  width="100px">
@@ -56,10 +56,10 @@ $(function() {
 <script>
 $(function() {
     $(".mouse").mouseover(function() {
-        $(this).css("border", "1px solid http://p.qiao.baidu.com/cps/chat?siteId=12834609&userId=18183564");
+        $(this).css("border", "1px solid http://p.qiao.baidu.com/cps/chat?siteId=12967110&userId=27156268");
         $(this).find(".lhjf21").css("background-color", "#0d97be");
     }).mouseout(function() {
-        $(this).css("border", "1px solid http://p.qiao.baidu.com/cps/chat?siteId=12834609&userId=18183564");
+        $(this).css("border", "1px solid http://p.qiao.baidu.com/cps/chat?siteId=12967110&userId=27156268");
         $(this).find(".lhjf21").css("background-color", "#f1f1f1");
     });
 })
