--- a/application/index/view/index/head.html
+++ b/application/index/view/index/head.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="{$webkeywords}" />
     <meta name="description" content="{$webdesc}" />
     <!--加载自定义css样式表-->
-    <link href="/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="/logo.png" rel="icon" type="image/x-icon" />
     <link href="/static/css/style.css" rel="stylesheet" type="text/css" media="all">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="/static/css/index.css" rel="stylesheet">
@@ -15,13 +15,13 @@
     <!--加载系统jquery库-->
     <script type="text/javascript" src="/static/js/jquery-1.8.3.min.js"></script>
     <script>
-    var _hmt = _hmt || [];
-    (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?ec367e174829d7023619742e62b9d201";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-    })();
+        var _hmt = _hmt || [];
+        (function() {
+          var hm = document.createElement("script");
+          hm.src = "https://hm.baidu.com/hm.js?5314d77277fa557fb14c563a7363cd88";
+          var s = document.getElementsByTagName("script")[0]; 
+          s.parentNode.insertBefore(hm, s);
+        })();
     </script>
 </head>
 
@@ -33,7 +33,7 @@
         <div class="snav">
             <div class="lhjhead">
                 <div class="ft"><h3 style="font-size: 24px;color: #fff">{$index1}</h3>
-                </div><a href="http://p.qiao.baidu.com/cps/chat?siteId=12834609&userId=18183564" target="_blank"><div class="bt">提前报名 &nbsp;&nbsp;<img src="/static/picture/1.png"></div></a>
+                </div><a href="http://p.qiao.baidu.com/cps/chat?siteId=12967110&userId=27156268" target="_blank"><div class="bt">提前报名 &nbsp;&nbsp;<img src="/static/picture/1.png"></div></a>
             </div>
         </div>
         <div style="clear:both"></div>
@@ -41,7 +41,7 @@
         <div class="navigation">
             <div class="nnav">
                 <div class="lhja">
-                    <a href="http://p.qiao.baidu.com/cps/chat?siteId=12834609&userId=18183564" target="_blank"><img src="/static/picture/{$index2}" style="height: 80px"></a>
+                    <a href="http://p.qiao.baidu.com/cps/chat?siteId=12967110&userId=27156268" target="_blank"><img src="/static/picture/{$index2}" style="height: 80px"></a>
                 </div>
                 <div class="lhjc">
                     <div class="lhjc1">
@@ -113,7 +113,7 @@
                                             <div class="lhjc1">
                                                 <ul>
                                                     <li>
-                                                        <a href="#a5">
+                                                        <a href="http://bbs.91gongkong.com">
                   <strong style="display:block;">91论坛</strong>
                   <span style="display:block;">bbs</span>
                 </a>
